// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadingContainer /> should render the LoadingContainer with icon size of 3 1`] = `
<div
  className="d-flex justify-content-center w-100 mt-3"
  style={
    Object {
      "minHeight": "300px",
    }
  }
>
  <div
    style={
      Object {
        "marginTop": "100px",
      }
    }
  >
    <div
      className="d-flex flex-column align-items-center m-3"
    >
      <i
        className="fa fa-spinner fa-pulse fa-3x"
      />
    </div>
  </div>
</div>
`;

exports[`<LoadingIcon /> should render a LoadingIcon of size 4 1`] = `
<div
  className="d-flex flex-column align-items-center m-3"
>
  <i
    className="fa fa-spinner fa-pulse fa-4x"
  />
</div>
`;
